updating layout and functionality

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@astrojs/preact": "^4.1.0",
+    "@nanostores/preact": "^1.0.0",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.2",
     "classnames": "^2.5.1",
+    "nanostores": "^1.0.1",
     "preact": "^10.27.0",
     "tailwindcss": "^4.1.12"
   }
