--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/preact": "^4.1.0",
     "@nanostores/preact": "^1.0.0",
+    "@sensinum/astro-strapi-blocks": "^1.2.4",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.2",
     "classnames": "^2.5.1",
